--- a/kleurentabel/index.html
+++ b/kleurentabel/index.html
@@ -5,13 +5,64 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Opdracht 6 - Kleurentabel</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<link rel="stylesheet" href="style.css">
 
 <body>
     <div class="opdrachtttitle">
         <h1>Opdracht 6 - Kleurentabel</h1>
     </div>
+    <div class="tafel2">
+        <div class="rood">rood</div>
+        <div class="groen">groen</div>
+        <div class="blauw">blauw</div>
+        <div class="rood">rood</div>
+
+        <div class="groen">groen</div>
+        <div class="blauw">blauw</div>
+        <div class="rood">rood</div>
+        <div class="groen">groen</div>
+
+        <div class="blauw">blauw</div>
+        <div class="rood">rood</div>
+        <div class="groen">groen</div>
+        <div class="blauw">blauw</div>
+
+        <div class="rood">rood</div>
+        <div class="groen">groen</div>
+        <div class="blauw">blauw</div>
+        <div class="rood">rood</div>
+    </div>
+    <table class="tafel">
+        <tr>
+            <th>Rij 1</th>
+            <td>rood</td>
+            <td>groen</td>
+            <td>blauw</td>
+            <td>rood</td>
+        </tr>
+        <tr>
+            <th>Rij 2</th>
+            <td>groen</td>
+            <td>blauw</td>
+            <td>rood</td>
+            <td>groen</td>
+        </tr>
+        <tr>
+            <th>Rij 3</th>
+            <td>blauw</td>
+            <td>rood</td>
+            <td>groen</td>
+            <td>blauw</td>
+        </tr>
+        <tr>
+            <th>Rij 4</th>
+            <td>rood</td>
+            <td>groen</td>
+            <td>blauw</td>
+            <td>rood</td>
+        </tr>
+    </table>
 </body>
 
 </html>
