--- a/Opdracht 10 - JavaScript dobbelstenen/index.html
+++ b/Opdracht 10 - JavaScript dobbelstenen/index.html
@@ -1,10 +1,9 @@
 <title>Opdracht 8 – JavaScript DOM manipulatie</title>
 
 <body>
-    <button onclick="myfunction(6)">Roll d6</button>
+    <button onclick="gooi(6)">Roll d6</button>
     <h1 id="rollresult"></h1>
     <h1 id="rollresultword"></h1>
-    <br><br><br><br>
 
     <table>
         <tr>
@@ -36,7 +35,42 @@
             <td id=roll6>0</td>
         </tr>
     </table>
-    <br><br><br>
+    <br><br>
+    <button onclick="gooi8(6)">Roll 8d6</button>
+    <h1 id="rolleresult"></h1>
+    <h1 id="rolleresultword"></h1>
+
+    <table>
+        <tr>
+            <th><b>Getal</b></th>
+            <th><b>Aantal</b></th>
+        </tr>
+        <tr>
+            <td>1</td>
+            <td id=rolle1>0</td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td id=rolle2>0</td>
+        </tr>
+        <tr>
+            <td>3</td>
+            <td id=rolle3>0</td>
+        </tr>
+        <tr>
+            <td>4</td>
+            <td id=rolle4>0</td>
+        </tr>
+        <tr>
+            <td>5</td>
+            <td id=rolle5>0</td>
+        </tr>
+        <tr>
+            <td>6</td>
+            <td id=rolle6>0</td>
+        </tr>
+    </table>
+    <br><br>
     <h1>Extra Dice</h1>
     <h1 id="rollresult2"></h1>
     <button onclick="mySecondfunction(4)">Roll d4</button>
