--- a/Opdracht 14 - Blackjack/index.html
+++ b/Opdracht 14 - Blackjack/index.html
@@ -56,6 +56,6 @@
             </table>
         </div>
     </div>
-    <script type="text/JavaScript" src="opschoning.js"></script>
+    <script type="text/JavaScript" src="script.js"></script>
 
 </body>
